--- a/NFCReader/NFCReader/Info.plist
+++ b/NFCReader/NFCReader/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NFCReaderUsageDescription</key>
+	<string>Message in the Card.</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
